@@ -1,3 +1,8 @@
+2015-11-06  Thomas Schwinge  <thomas@codesourcery.com>
+
+	* testsuite/libgomp.oacc-c-c++-common/loop-red-v-2.c: XFAIL.
+	* testsuite/libgomp.oacc-c-c++-common/loop-red-w-2.c: Likewise.
+
 2015-11-05  Jakub Jelinek  <jakub@redhat.com>
 	    Ilya Verbin  <ilya.verbin@intel.com>
 
